# pinguino

./: .gitignore  Cargo.toml  LICENSE  README.md
 test/: README.md
src/: _client.rs  example.rs  lib.rs  main.rs
src/app/: send.rs
src/client/: client.rs  mod.rs
src/client/wares/: bind.rs  handshake.rs  mod.rs  send.rs  subscribe.rs  terminate.rs
src/logging/: mod.rs
src/logging/message/: connect.rs  elapsed.rs  mod.rs  problem.rs  stat.rs
src/protocol/: mod.rs  request.rs  response.rs  utils.rs  varmap.rs
src/protocol/wares/: after_connect.rs  before_connect.rs  mod.rs  starting_bytesware.rs
src/protocol/wares/ending_bytesware/: default_bind.rs  default_handshake.rs  default_send.rs  mod.rs
src/protocol/wares/middleware/: default_bind.rs  default_handshake.rs  default_send.rs  mod.rs
src/router/: app.rs  main_handler.rs  mod.rs  request_handler.rs  send_handler.rs  state.rs
src/tests/: auth.rs  mod.rs
